--- a/Revamedia/src/styles.scss
+++ b/Revamedia/src/styles.scss
@@ -8,6 +8,7 @@ body {
   scroll-behavior: smooth;
   font-family: 'Quicksand', sans-serif;
   overflow-x: hidden;
+  // overflow-y:visible;
 }
 $orange: #FEAE49;
 $blue: #57BEE6;
