--- a/Revamedia/src/app/Components/error-page/error-page.component.scss
+++ b/Revamedia/src/app/Components/error-page/error-page.component.scss
@@ -1,7 +1,8 @@
 .error-page{
   // margin-left: 6%;
   font-family: "Tomorrow", sans-serif;
-  height: 100vh;
+  min-height: 100vh;
+  width: 100vw;
   background-image: linear-gradient(
     to top,
     #2e1753,
