--- a/Revamedia/src/app/Components/forgot/forgot.component.scss
+++ b/Revamedia/src/app/Components/forgot/forgot.component.scss
@@ -9,7 +9,7 @@ $darkgrey: rgb(61, 66, 74);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%23ffffff' stroke-width='0.5' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(31.35) translate(-968.1 -726.08)'%3E%3Cuse fill='%23fcfcfc' href='%23s' y='2'/%3E%3Cuse fill='%23fcfcfc' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='2'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(31.35) translate(-968.1 -726.08)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(31.35) translate(-968.1 -726.08)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(31.35) translate(-968.1 -726.08)'%3E%3Cg fill='%23f2f2f2'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(31.35) translate(-968.1 -726.08)'%3E%3Cg fill='%23ffffff'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%23efefef'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(31.35) translate(-968.1 -726.08)'%3E%3Cg fill='%23F60'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(31.35) translate(-968.1 -726.08)'%3E%3Cg fill='%23F60'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(31.35) translate(-968.1 -726.08)'%3E%3Cg fill='%23F60'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
 
   .forgot-nav {
@@ -24,92 +24,113 @@ $darkgrey: rgb(61, 66, 74);
     }
   }
 
-  .forgot{
-    width: 30%;
-    position: fixed;
-    top: 30%;
-    left: 35%;
-    background: white;
-    box-shadow: rgba(0, 0, 0, 0.227) 0px 3px 8px;
-    border-radius: 10px;
-    padding: 2rem;
+  .forgot-container{
+    width: 100%;
+    min-height: 90vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 
-    h2 {
-      font-size: 2.3rem;
-      color: $darkgrey;
-      width: 100%;
-      text-align: center;
-    }
+    .forgot{
+      width: 30%;
+      background: white;
+      box-shadow: rgba(0, 0, 0, 0.227) 0px 3px 8px;
+      border-radius: 10px;
+      padding: 2rem;
 
-    form{
-      margin: .5rem 0;
-      border-top: solid 1px $lightgrey;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      padding: .5rem 0;
+      h2 {
+        font-size: 2rem;
+        color: $darkgrey;
+        width: 100%;
+        text-align: center;
+      }
 
-      .form-row {
+      form{
+        border-top: solid 1px $lightgrey;
         width: 100%;
         display: flex;
         flex-direction: column;
-        margin-bottom: .75rem;
+        padding: .5rem 0;
 
-        label {
-          font-size: 1rem;
-          color: $darkgrey;
-        }
-
-
-        input {
-          font-size: 1rem;
-          border-radius: 5px;
-          color: $darkgrey;
-          border: solid 1px $grey;
-          padding: .3rem;
+        .form-row {
           width: 100%;
-          outline: none;
-          border: solid 1px $grey;
+          display: flex;
+          flex-direction: column;
+          margin-bottom: .75rem;
 
-          &:focus {
-            border: solid 1.4px $orange;
+          label {
+            font-size: 1rem;
+            color: $darkgrey;
+          }
+
+
+          input {
+            font-size: 1rem;
+            border-radius: 5px;
+            color: $darkgrey;
+            border: solid 1px $grey;
+            padding: .3rem;
+            width: 100%;
+            outline: none;
+            border: solid 1px $grey;
+
+            &:focus {
+              border: solid 1.4px $orange;
+            }
+          }
+
+          span {
+            margin-top: .3rem;
+            width: 100%;
+            text-align: right;
+            font-size: .9rem;
+            color: #3fb3e1;
+            cursor: pointer;
+            &:hover {
+              color: #eda144;
+            }
           }
         }
-
-        span {
-          margin-top: .3rem;
+        .submit {
           width: 100%;
-          text-align: right;
-          font-size: .9rem;
-          color: #3fb3e1;
-          cursor: pointer;
-          &:hover {
-            color: #eda144;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          padding-bottom: 1rem;
+          border-bottom: 1px solid $lightgrey;
+
+          button {
+            width: 30%;
+            border-radius: 5px;
+            border: none;
+            background: $orange;
+            color: $darkgrey;
+            padding: .3rem 0;
+            font-size: 1.2rem;
+            cursor: pointer;
+            transition: all .3s ease-in-out;
+
+            &:hover {
+              background: #eda144;
+              color: black;
+            }
           }
         }
       }
-      .submit {
-        width: 100%;
+      .help{
         display: flex;
+        flex-direction:column;
         align-items: center;
-        justify-content: center;
-        padding-bottom: 1rem;
-        border-bottom: 1px solid $lightgrey;
-
-        button {
-          width: 40%;
-          border-radius: 5px;
-          border: none;
-          background: $orange;
+        color: $darkgrey;
+        font-size: .9rem;
+        a{
+          text-decoration: none;
           color: $darkgrey;
-          padding: .3rem 0;
-          font-size: 1.2rem;
+          font-size: 1rem;
           cursor: pointer;
-          transition: all .3s ease-in-out;
-
-          &:hover {
-            background: #eda144;
-            color: black;
+          &:hover{
+            text-decoration: underline;
           }
         }
       }
@@ -119,9 +140,12 @@ $darkgrey: rgb(61, 66, 74);
 
 @media screen and (max-width: 800px) {
   .forgot-page {
-    .forgot {
-      left: 10%;
-      width: 80%;
+    .forgot-container{
+      width: 100%;
+      min-height: 50vh;
+      .forgot {
+        width: 90%;
+      }
     }
   }
 }
