Profanity filter search

--- a/Revamedia/src/app/Components/settings/settings.component.html
+++ b/Revamedia/src/app/Components/settings/settings.component.html
@@ -207,6 +207,7 @@
         </div>
         <img *ngIf="getUserProfilePictureTemp() !==''" [src]="getUserProfilePictureTemp()" >
       </div>
+      <span style="font-size: .9rem;">Press on Upload</span>
       <input class="uploadBtn" type="button" (click)="onUpload()" value="Upload">
     </div>
     <div class="post-submit">
