--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -1,7 +1,12 @@
 <div class="home-page" id="home-page">
-  <app-home-page-title [user]="user"></app-home-page-title>
+   <app-home-page-title [user]="user"></app-home-page-title>
   <div class="main" id="main">
-    <div  class="post-data" *ngFor="let post of posts">
+    <div class="buttons">
+      <button (click)="openModal('add','post-modal', user.userId)">Add Post</button>
+      <button (click)="openModal('add','youtube-modal', user.userId)" id="share-youtube">Share Video</button>
+    </div>
+    <!-- <app-post-add [user]="user"></app-post-add> -->
+    <div class="post-data" *ngFor="let post of posts">
       <app-post [post]="post" ></app-post>
     </div>
     <app-no-post [posts]="posts" ></app-no-post>>
