--- a/Revamedia/src/app/Components/post-add/post-add.component.html
+++ b/Revamedia/src/app/Components/post-add/post-add.component.html
@@ -1,6 +1,5 @@
-
 <!-- ADD POST FORM START -->
-<!-- <div class="modal" id="add-post-modal">
+<div class="modal" id="add-post-modal">
   <div class="form-header">
     <h3>Create new post</h3>
     <span (click)="closeModal('add', 'post-modal')">x</span>
@@ -11,7 +10,7 @@
       <input type="url" name="image" ngModel id="image" placeholder="Image url...">
     </div>
     <div class="form-data">
-      <input type="text" name="userId" ngModel="{{user.userId }}">
+      <input type="text" name="userId" ngModel="{{ user?.userId }}">
       <h4>Write a caption</h4>
       <textarea name="message" ngModel placeholder="Write a caption..." rows="6"></textarea>
     </div>
@@ -19,5 +18,5 @@
       <button>Create Post</button>
     </div>
   </form>
-</div> -->
+</div>
 <!-- ADD POST FORM END -->
