--- a/Revamedia/src/app/Components/post-comment/post-comment.component.html
+++ b/Revamedia/src/app/Components/post-comment/post-comment.component.html
@@ -1,41 +1,22 @@
-<!-- Edit COMMENT FORM START -->
-<div class="modal" id="edit-comment-modal">
-  <div class="form-header">
-    <h3>Edit comment</h3>
-    <span (click)="closeModal('edit', 'comment-modal')">x</span>
+
+
+<div class="comment-title">
+  <div class="comment-author">
+    <img (click)="goToProfile(comment?.ownerId?.userId)" src="{{ comment?.ownerId?.profilePicture }}" alt="{{comment?.ownerId?.username}}">
+    <p (click)="goToProfile(comment?.ownerId?.userId)" title="View {{comment?.ownerId?.username}} Profile" >{{comment?.ownerId?.username}}</p>
   </div>
-  <form #editCommentForm="ngForm" (ngSubmit)="onEditComment(editCommentForm)" ngNativeValidate>
-    <input type="hidden" name="comment_id" ngModel="{{ editComment?.commentId }}">
-    <div class="form-data">
-      <textarea ngModel="{{ editComment?.message }}" name="message" required rows="4"></textarea>
-    </div>
-    <div class="post-submit">
-      <button>Update comment</button>
-    </div>
-  </form>
-</div>
-<!-- Edit COMMENT FORM END -->
-
-<!-- delete COMMENT FORM START -->
-<div class="modal" id="delete-comment-modal">
-  <div class="form-header">
-    <h3>Delete comment</h3>
-    <span (click)="closeModal('delete',  'comment-modal')">x</span>
+  <div class="comment-option" id="comment-option" *ngIf="comment?.ownerId?.userId == user?.userId">
+    <button (click)="openModal('edit', 'comment-modal', comment)" >Edit</button>
+    <button (click)="openModal('delete', 'comment-modal', comment)" >Delete</button>
   </div>
-  <form (ngSubmit)="onDeleteComment(deleteComment?.commentId)">
-    <h2>Are you sure you want to delete this comment?</h2>
-    <span style="font-size: .8rem;">{{ deleteComment?.message }}</span>
-    <div class="post-submit">
-      <button id="deleteBtn">Delete comment</button>
-    </div>
-  </form>
 </div>
-<!-- delete COMMENT FORM END -->
-
-<span *ngIf="p?.comments.length === 0">No Comments</span>
-        <span (click)="toggleHideComments(p.postId)" *ngIf="p?.comments.length !== 0" id="viewComments">{{viewComments ? 'Hide Comments' : 'View Comments' }}</span>
-<app-post-comment-reply></app-post-comment-reply>
-
-
+<div class="comment-content">
+  <p>{{ comment?.message }}</p>
+  <img *ngIf="comment?.giphyUrl !== ''" src="{{ comment?.giphyUrl }}" alt="Attached Image">
+</div>
+<div class="reply-card">
+  <button >Reply</button>
+  <!-- (click)="openAddReply()" -->
+</div>
 
 
