--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -1,14 +1,16 @@
-<div class="home-page" id="home-page">
+<div class="home-page" id="home-page" >
    <app-home-page-title [user]="user"></app-home-page-title>
-  <div class="main" id="main">
+    <div class="main" id="main">
     <div class="buttons">
-      <button (click)="openModal('add','post-modal', user.userId)">Add Post</button>
-      <button (click)="openModal('add','youtube-modal', user.userId)" id="share-youtube">Share Video</button>
+      <button (click)="openNewPostForm()">Add Post</button>
+      <button  id="share-youtube">Share Video</button>
     </div>
-    <!-- <app-post-add [user]="user"></app-post-add> -->
+    <div class="post-data">
+      <app-post-add *ngIf="addPostIsOn" [user]="user"  (closeNewPostForm)='closeNewPostForm()'></app-post-add>
+    </div>
     <div class="post-data" *ngFor="let post of posts">
-      <app-post [post]="post" ></app-post>
+      <app-post [post]="post"  ></app-post>
     </div>
-    <app-no-post [posts]="posts" ></app-no-post>>
+    <app-no-post [posts]="posts"></app-no-post>>
   </div>
 </div>
