--- a/Revamedia/src/app/Components/post/post.component.html
+++ b/Revamedia/src/app/Components/post/post.component.html
@@ -1,4 +1,3 @@
-
 <div class="post">
   <div class="post-title" id="setBackgroundColor">
     <div class="post-author" title="View {{post.ownerId.username}} Profile">
@@ -6,12 +5,10 @@
         (click)="goToProfile(post.ownerId?.userId)">
       <p (click)="goToProfile(post.ownerId.userId)">{{ post.ownerId.username }}</p>
     </div>
-    <div class="post-options" >
-      <fa-icon (click)="openModal('edit', 'youtube-modal', post)" *ngIf="post?.image === null" id="editIcon"
-        [icon]="faPenToSquare"></fa-icon>
-      <fa-icon (click)="openModal('delete', 'youtube-modal', post)" *ngIf="post?.image === null" id="trashIcon"
-        [icon]="faTrashCan"></fa-icon>
-  </div>
+    <div class="post-options">
+      <fa-icon  id="editIcon" [icon]="faPenToSquare" ></fa-icon>
+      <fa-icon  id="trashIcon" [icon]="faTrashCan"></fa-icon>
+    </div>
   </div>
   <div class="post-body" id="post-body">
     <img src="{{post.image}}" alt="{{post.image}}" *ngIf="post?.image !== null">
@@ -21,7 +18,7 @@
     </div>
     <div class="post-options" id="setBackgroundColor">
       <div class="container">
-         <div class="likes" (click)="likePost(post)">
+        <div class="likes" (click)="likePost(post)">
           <fa-icon [icon]="faHeart" size="lg" [ngClass]="[post.likes.length < 1 ? 'NoLike' : 'OneLike']">
           </fa-icon>
           <span>{{ post.likes?.length }} likes</span>
@@ -33,16 +30,18 @@
       <div class="bookmark">
         <fa-icon id="icon" title="Bookmark" [icon]="faBookmark" size="lg"></fa-icon>
       </div>
+
+    </div>
+
+    <span *ngIf="post.comments?.length === 0">No Comments</span>
+    <div class="post-comments-section" *ngIf="viewCommentsIsOn" id="commentSection">
+      <div class="add-comment" id="addCommentReplyForm">
+        <app-post-comment-add [post]="post"></app-post-comment-add>
+      </div>
+      <h5>Comments</h5>
+      <div class="comment" *ngFor="let comment of post?.comments">
+        <app-post-comment [comment]="comment"></app-post-comment>
+      </div>
     </div>
   </div>
-  <div class="post-comments-section" *ngIf="post?.comments.length > 0 && viewComments == true" id="commentSection">
-    <h5>Comments</h5>
-    <div class="comment" *ngFor="let comment of post?.comments">
-      <app-post-comment [comment]="comment"></app-post-comment>
-    </div>
-  </div>
-
-
 </div>
-
-
