--- a/Revamedia/src/app/Components/post/post.component.html
+++ b/Revamedia/src/app/Components/post/post.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="post-options">
       <fa-icon  id="editIcon" [icon]="faPenToSquare" ></fa-icon>
-      <fa-icon  id="trashIcon" [icon]="faTrashCan"></fa-icon>
+      <fa-icon (click)="openModal('delete', 'post-modal', post)"  id="trashIcon" [icon]="faTrashCan"></fa-icon>
     </div>
   </div>
   <div class="post-body" id="post-body">
@@ -44,4 +44,21 @@
       </div>
     </div>
   </div>
+</div>
+<!-- BLACKOUTSCREEN -->
+<div class="screen" id="screen" (click)="closeAnyModal()"></div>
+
+<div class="modal" id="delete-post-modal">
+  <div class="form-header">
+    <h3>Delete post</h3>
+    <span (click)="closeModal('delete', 'post-modal')">x</span>
+  </div>
+  <form (ngSubmit)="onDeletePost(post.postId)">
+    <h2>Are you sure you want to delete this post?</h2>
+    <span style="font-size: .9rem;">{{ deletePost?.message }}</span>
+    <img style="width:8rem;height: 8rem; object-fit:cover;" *ngIf="deletePost?.image !== ''" src="{{ deletePost?.image }}" alt="Image">
+    <div class="post-submit">
+      <button id="deleteBtn">Delete Post</button>
+    </div>
+  </form>
 </div>
